Added tally in HTML

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
         <!-- game data -->
         </div>
         <div class="col-md-4">
-
             <div class="tally">
+                <span class="result"></span>
+                <p>Wins: <span id="wins_t"></span></p>
+                <p>Losses: <span id="losses_t"></span></p>
 
             </div>
 
