--- a/index.html
+++ b/index.html
@@ -76,85 +76,7 @@
         </div>    
     </div>
 
-    <div class="row">
-        <div class="dialogs">
-<!-- room for more content -->
-            <span id="quote1">
-                <ul>
-                    <li>You're ordering a new rock? </li>
-                    <li> <span class="hank">I'm bidding on a new mineral.</span> </li>
-                    <li>It's a nice one. </li>
-                    <li> <span class="hank">What?</span> </li>
-                    <li> It's pretty. </li>
-                    <li> <span class="hank">I need the thing. </span> </li>
-                    <li> Okay. Numero uno? </li>
-                    <li> <span class="hank">Dos.</span> </li>
-                    <li> Okay. Those… Those pretty little crystals. I like that. </li>
-                    <li><span class="hank"> Okay.</span> </li>
-                </ul>
-                    <p>
-                        Read more: https://www.springfieldspringfield.co.uk/view_episode_scripts.php?tv-show=breaking-bad&episode=s04e01 
-                    </p>           
-            </span>
-            <span id="quote2">
-                <ul>
-                    <li> You okay? </li>
-                    <li> <span class="hank">Fine.</span> </li>
-                    <li> Can't you sleep? </li>
-                    <li> <span class="hank">Actually, yes, Marie. This is me sleeping. What's it look like?</span> </li>
-                    <li> Looks like you're looking at a rock at 2:24 in the morning. </li>
-                    <li> <span class="hank">This is not a rock. This is a mineral, for, like, the tenth time.</span> </li>
-                    <li> Okay. Got it. </li>
-                    <li> <span class="hank">Blue corundum, to be precise.</span> </li>
-                    <li> Blue corundum. Well, it's very pretty. </li>
-                    <li> <span class="hank">It's encrusted with igneous biotite in a mica schist. Would you like some more detail Because I can give it to you. You keep acting like you give the first shit, and I’ll…</span> </li>
-                    <li> Hank. </li>
-                    <li> <span class="hank">Found in the Central Cordillera of Irian Jaya. Blue corundum.</span> </li>
-                    <li> I'm just saying it's 2 in the morning. I'm just asking if maybe… </li>
-                    <li> <span class="hank">You know, when last I counted, Marie, there were four bedrooms in this house. You know, I mean, if I'm keeping you awake and all that.</span> </li>
-                </ul>
-                <p>
-                    Read more: https://www.springfieldspringfield.co.uk/view_episode_scripts.php?tv-show=breaking-bad&episode=s04e02
-                </p>   
-            </span>
-            <span id="quote3">
-                <ul>
-                    <li> Go show the boys your new rock collection. We're going to get things organized.</li>
-                    <li>Yeah, it'll be about 10 minutes. </li>
-                    <li> You have a rock collection? </li>
-                    <li> <span class="hank">It's a mineral collection. Uh, just a little something I… You guys want to see it? Want to see it? </span> </li>
-                    <li> Sure. Let's go see it. </li>
-                    <li> Oh, hey, let me. </li>
-                    <li> <span class="hank">Hey, it's all right. I got it. Come on, guys, it's down the hall here. </span> </li>
-                    <li> <span class="hank">Now that one there, that's Rhodonite, okay? It's manganese inosilicate.</span> </li>
-                    <li> Cool. What… What makes it be all pink like that? </li>
-                    <li> <span class="hank">Well, that's the manganese part, okay? It… It oxidizes, you know, like rust.</span> </li>
-                    <li> Exactly. Manganese can have an oxidation state of between -3 and +7, which takes it through a range of colors… Purple, green, blue. But its most stable state is +2, which is usually pale pink. So… </li>
-                    <li> <span class="hank">So Exactly. Whatever the hell he said. </span>
-                    <br>
-                    <span class="hank">Anyway, you, uh, you get the idea.</span> </li>
-                    <li> Yeah, it's, uh, interesting. Interesting stuff, that. </li>
-                </ul>
-                <p>
-                    Read more: https://www.springfieldspringfield.co.uk/view_episode_scripts.php?tv-show=breaking-bad&episode=s04e04
-                </p>
-            </span>
-            <span id="quote4">
-                <ul>
-                    <li> Marie, is that my minerals? </li>
-                    <li> <span class="hank">Yes, Hank.</span> </li>
-                    <li> How many boxes? I don't know-- Three, four, a hundred, a million. I don't know. </li>
-                    <li> <span class="hank">Did you check them for damage?</span> </li>
-                    <li> Oh, my God. They're rocks, Hank. </li>
-                    <li> <span class="hank">No, they're minerals. Jesus, Marie, I got some geodes coming that are very delicate, all right? And I will not accept any boxes that have damage. Those delivery jackoffs, I'm telling you-- I'm not getting ass raped by those bastards, all right?</span><br> 
-                    <span class="hank">Just-- Honey, would you check? Just check, please? </span> </li>
-                </ul>
-                <p>
-                Read more: https://www.springfieldspringfield.co.uk/view_episode_scripts.php?tv-show=breaking-bad&episode=s04e02
-                </p>        
-            </span>
-        </div>
-    </div>
+
 
 
     <div class="row">
@@ -177,6 +99,96 @@
             </div>
         </div>
     </div>
+
+<div class="row">
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-8">
+    <div class="dialogs">
+<!-- room for more content -->
+        <span id="quote1">
+            <ul>
+                <li>You're ordering a new rock? </li>
+                <li> <span class="hank">I'm bidding on a new mineral.</span> </li>
+                <li>It's a nice one. </li>
+                <li> <span class="hank">What?</span> </li>
+                <li> It's pretty. </li>
+                <li> <span class="hank">I need the thing. </span> </li>
+                <li> Okay. Numero uno? </li>
+                <li> <span class="hank">Dos.</span> </li>
+                <li> Okay. Those… Those pretty little crystals. I like that. </li>
+                <li><span class="hank"> Okay.</span> </li>
+            </ul>
+                <p>
+                    <a href="https://www.springfieldspringfield.co.uk/view_episode_scripts.php?tv-show=breaking-bad&episode=s04e01">See full transcript</a>
+                </p>           
+        </span>
+        <span id="quote2">
+            <ul>
+                <li> You okay? </li>
+                <li> <span class="hank">Fine.</span> </li>
+                <li> Can't you sleep? </li>
+                <li> <span class="hank">Actually, yes, Marie. This is me sleeping. What's it look like?</span> </li>
+                <li> Looks like you're looking at a rock at 2:24 in the morning. </li>
+                <li> <span class="hank">This is not a rock. This is a mineral, for, like, the tenth time.</span> </li>
+                <li> Okay. Got it. </li>
+                <li> <span class="hank">Blue corundum, to be precise.</span> </li>
+                <li> Blue corundum. Well, it's very pretty. </li>
+                <li> <span class="hank">It's encrusted with igneous biotite in a mica schist. Would you like some more detail Because I can give it to you. You keep acting like you give the first shit, and I’ll…</span> </li>
+                <li> Hank. </li>
+                <li> <span class="hank">Found in the Central Cordillera of Irian Jaya. Blue corundum.</span> </li>
+                <li> I'm just saying it's 2 in the morning. I'm just asking if maybe… </li>
+                <li> <span class="hank">You know, when last I counted, Marie, there were four bedrooms in this house. You know, I mean, if I'm keeping you awake and all that.</span> </li>
+            </ul>
+            <p>
+                <a href="https://www.springfieldspringfield.co.uk/view_episode_scripts.php?tv-show=breaking-bad&episode=s04e02">See full transcript</a>
+            </p>   
+        </span>
+        <span id="quote3">
+            <ul>
+                <li> Go show the boys your new rock collection. We're going to get things organized.</li>
+                <li> Yeah, it'll be about 10 minutes. </li>
+                <li> You have a rock collection? </li>
+                <li> <span class="hank">It's a mineral collection. Uh, just a little something I… You guys want to see it? Want to see it? </span> </li>
+                <li> Sure. Let's go see it. </li>
+                <li> Oh, hey, let me. </li>
+                <li> <span class="hank">Hey, it's all right. I got it. Come on, guys, it's down the hall here. </span> </li>
+                <li> <span class="hank">Now that one there, that's Rhodonite, okay? It's manganese inosilicate.</span> </li>
+                <li> Cool. What… What makes it be all pink like that? </li>
+                <li> <span class="hank">Well, that's the manganese part, okay? It… It oxidizes, you know, like rust.</span> </li>
+                <li> Exactly. Manganese can have an oxidation state of between -3 and +7, which takes it through a range of colors… Purple, green, blue. But its most stable state is +2, which is usually pale pink. So… </li>
+                <li> <span class="hank">So Exactly. Whatever the hell he said. </span>
+                <br>
+                <span class="hank">Anyway, you, uh, you get the idea.</span> </li>
+                <li> Yeah, it's, uh, interesting. Interesting stuff, that. </li>
+            </ul>
+            <p>
+                <a href="https://www.springfieldspringfield.co.uk/view_episode_scripts.php?tv-show=breaking-bad&episode=s04e04">See full transcript</a>
+            </p>
+        </span>
+        <span id="quote4">
+            <ul>
+                <li> Marie, is that my minerals? </li>
+                <li> <span class="hank">Yes, Hank.</span> </li>
+                <li> How many boxes? I don't know... Three, four, a hundred, a million. I don't know. </li>
+                <li> <span class="hank">Did you check them for damage?</span> </li>
+                <li> Oh, my God. They're rocks, Hank. </li>
+                <li> <span class="hank">No, they're minerals. Jesus, Marie, I got some geodes coming that are very delicate, all right? And I will not accept any boxes that have damage. Those delivery jackoffs, I'm telling you... I'm not getting ass raped by those bastards, all right?</span><br> 
+                <span class="hank">Just... Honey, would you check? Just check, please? </span> </li>
+            </ul>
+            <p>
+            <a href="https://www.springfieldspringfield.co.uk/view_episode_scripts.php?tv-show=breaking-bad&episode=s04e02">See full transcript</a> 
+            </p>        
+        </span>
+    </div>
+</div>
+
+
+
+
+
+
+
 </div>
 </main>    
 
