--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 
                 </div>
                 <div class="col-md-8">
-                    <p>Hank is bidding on <del>rocks</del> <ins>minerals</ins> to complete his collection. But he cannot go over his budget! </p> 
+                    <p>After having been shot by the cartel, Hank is recovering at home. Helped by the sweet and understanding Marie.<br> 
+                        <br>From his bed, he is bidding on <del>rocks</del> <ins>minerals</ins> to complete his collection, which is tricky: with the health care and physical therapy bills, he cannot go over his budget. </p> 
                     <p>Help him get them all without spending more than he can afford, by clicking on a <del>rock</del> <ins>mineral</ins> to purchase as many as he can within the allocated allowance.</p> 
                 </div>
             </div>
